[tool.poetry]
name = "celero-bfm-fi"
version = "0.1.0"
description = "Libary to interact with grcp client for company management"
authors = ["Maicon de Menezes <maicon.menezes@celero.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "celero_bfm_fi", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ipython = "^8.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "google-artifact-registry"
url = "https://us-east1-python.pkg.dev/celero-main/celero-finance/simple/"
priority = "explicit"