[tool.poetry]
name = "celero-bfm-fi-client"
version = "0.1.0"
description = "Lib to interact with gRPC client for company"
authors = ["Maicon de Menezes <maicon.menezes@celero.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
celero-bfm-fi-proto = { version = "0.1.0", source = "artifact-registry" }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.45"
grpcio-tools = "^1.68.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[[tool.poetry.source]]
name = "artifact-registry"
url = "https://us-east1-python.pkg.dev/celero-main/celero-finance/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"